Only meant to apply the overflow: auto on the tree root, not on every branch. Fixes #9449 !strict.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@20408 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1283,7 +1283,7 @@ div.dijitTabBtnDisabled img {
 
 /* Tree */
 
-.dijitTreeContainer {
+.dijitTree {
 	overflow: auto;		/* in case a parent layout container sizes us */
 }
 
